# research-agent-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.py  api.py  prompt-log.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
agent/: core.py  guardrails.py  llm.py  pii.py  tracer.py
agent/tools/: arxiv.py  (+3 more)
eval/: benchmark.py  questions.json
outputs/: reference_outputs.md
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_arxiv.py  test_base.py  test_core.py  test_e2e.py  test_fred.py  test_guardrails.py  test_llm.py  test_pii.py  test_scoring.py  test_tracer.py  test_wikipedia.py
traces/: 20260625_155858_What_is_the_Federal_Reserves_discount_w.json  20260625_160018_What_is_the_Federal_Reserves_discount_w.json  20260625_160054_What_are_the_Basel_III_capital_requireme.json  20260625_160122_What_recent_academic_research_exists_on_.json  20260625_160223_How_did_the_Federal_Reserves_monetary_p.json  20260625_160238_What_is_the_current_US_unemployment_rate.json  20260625_160250_Explain_the_relationship_between_yield_c.json  20260625_160302_What_is_the_best_restaurant_in_New_York_.json  20260625_160318_What_are_the_implications_of_quantum_com.json  20260625_160405_Explain_the_relationship_between_yield_c.json  20260625_160650_What_are_the_Basel_III_capital_requireme.json  20260625_160958_What_are_the_Basel_III_capital_requireme.json  20260625_161238_What_are_the_Basel_III_capital_requireme.json  20260625_161545_What_recent_academic_research_exists_on_.json  benchmark_results.json  (+1 more)
(+16 files in other folders)
